--- a/welcome.html
+++ b/welcome.html
@@ -18,6 +18,7 @@
 						<!--<img src="images/WX20170827-002735@2x.png" alt="">-->
 					<!--</div>-->
 					<div class="userintro">
+						<div>刘昴星</div>
 						<div>工号：12241242</div>
 						<div>人员身份：超级管理员</div>
 						<div>上次登录时间：2019-10-09</div>
@@ -35,7 +36,7 @@
 		</div>
 		<div class="easyui-panel" title="政策新闻" style="width:100%; height:auto">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-				政策新闻X8
+				<!-- 政策新闻X8 -->
 			</div>
 		</div>
 	</div>
@@ -47,7 +48,7 @@
 		</div>
 		<div class="easyui-panel" title="校务公开" style="width:350px; height:auto;">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-				校务公开X6
+				<!-- 校务公开X6 -->
 			</div>
 		</div>
 	</div>
