--- a/infolist.html
+++ b/infolist.html
@@ -25,9 +25,9 @@
        title="文章列表" toolbar="#tb"
        singleSelect="true" fitColumns="true" id="articlelist">
 </table>
-<div id="addialog" class="easyui-dialog" closed="true" style="width:600px;height:480px;padding:10px">
+<div id="addialog" class="easyui-dialog" closed="true" style="width:100%;height:100%;padding:10px">
     <form action="" id="formlist">
-        <table cellpadding="5">
+        <table cellpadding="5" width="100%">
             <tr>
                 <td>摘要:</td>
                 <td><input class="easyui-validatebox" data-options="required:true" type="text" name="summary"></input></td>
@@ -43,14 +43,14 @@
             </tr>
             <tr>
                 <td>封面</td>
-                <td colspan="3"><input class="easyui-filebox" id="uploadcover" style="width: 90%" buttonText='封面上传' type="text" name="cover_img"><a href="javascript:void(0)" class="easyui-linkbutton fr" onclick="submitCover()">上传</a><input type="hidden" name="coverImg"></td>
+                <td colspan="3"><input class="easyui-filebox" id="uploadcover" style="width: 300px" buttonText='封面上传' type="text" name="cover_img"><a href="javascript:void(0)" class="easyui-linkbutton" style="margin-left:10px;" onclick="submitCover()">上传</a><input type="hidden" name="coverImg"></td>
             </tr>
             <tr>
                 <td>
                     内容
                 </td>
                <td colspan="3">
-                   <textarea id="editor" name="content" style="width:90%;height:200px;">
+                   <textarea id="editor" name="content" style="width:100%;height:350px;">
                 </textarea>
                </td>
             </tr>
@@ -142,7 +142,7 @@
     });
 
     function updateRow(changes) {
-        $.post(commonURL + 'm/user/editUserinfo.do', changes, function (json) {
+        $.post(commonURL + 'm/news/edit.do', changes, function (json) {
             if (json.success) {
                 $.messager.alert('提示', '修改成功！', 'info');
                 $("#addialog").dialog("close")
