modify ow manage menu type &  modify config kindeditor

--- a/infolist.html
+++ b/infolist.html
@@ -70,7 +70,7 @@
 <script>
     KindEditor.ready(function(K) {
         window.editor = K.create('#editor', {
-            uploadJson : commonURL + 'ditor/jsp/upload_json.jsp',
+            uploadJson : commonURL + 'editor/jsp/upload_json.jsp',
             fileManagerJson : commonURL + 'editor/jsp/file_manager_json.jsp',
             allowFileManager : true
         });
