--- a/welcome.html
+++ b/welcome.html
@@ -29,31 +29,97 @@
 		</div>
 	</div>
 	<div data-options="region:'center'">
-		<div class="easyui-panel" title="学校新闻" style="width:100%; height:400px;">
+		<div class="easyui-panel" title="教学通知" style="width:100%; height:300px;">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-
+				<ul id="jxnotice"></ul>
 			</div>
 		</div>
-		<div class="easyui-panel" title="政策新闻" style="width:100%; height:auto">
+		<div class="easyui-panel" title="教学新闻" style="width:100%; height:300px">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-				<!-- 政策新闻X8 -->
+				<ul id="zcnews"></ul>
 			</div>
 		</div>
 	</div>
 	<div data-options="region:'east'" style="width:350px;">
-		<div class="easyui-panel" title="学校新闻" style="width:350px; height:400px;">
+		<div class="easyui-panel" title="学校动态" style="width:350px; height:300px;">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-
+				<ul id="scnews"></ul>
 			</div>
 		</div>
-		<div class="easyui-panel" title="校务公开" style="width:350px; height:auto;">
+		<div class="easyui-panel" title="学校新闻" style="width:350px; height:300px;">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
-				<!-- 校务公开X6 -->
+				<ul id="xwnotice"></ul>
 			</div>
 		</div>
 	</div>
 
 <script src="js/common.js"></script>
+<script>
+    $.post(commonURL + 'm/news/list.do', {
+        menuId:43,
+        startNum:0,
+        perNum:8
+    }, function(json){
+        if(json.success){
+            var newslist = ''
+            var data = json.data.rows
+            $.each(data, function (index, item) {
+                newslist += '<li><a target="_blank" href="../home/content.html?id=' + item.id + '">' + item.title + '</a></li>'
+            })
+			$("#jxnotice").html(newslist)
+        }else{
+            alert(json.msg)
+        }
+    }, 'json')
+    $.post(commonURL + 'm/news/list.do', {
+        menuId:44,
+        startNum:0,
+        perNum:8
+    }, function(json){
+        if(json.success){
+            var newslist = ''
+            var data = json.data.rows
+            $.each(data, function (index, item) {
+                newslist += '<li><a target="_blank" href="../home/content.html?id=' + item.id + '">' + item.title + '</a></li>'
+            })
+            $("#zcnews").html(newslist)
+        }else{
+            alert(json.msg)
+        }
+    }, 'json')
+    $.post(commonURL + 'm/news/list.do', {
+        menuId:71,
+        startNum:0,
+        perNum:8
+    }, function(json){
+        if(json.success){
+            var newslist = ''
+            var data = json.data.rows
+            $.each(data, function (index, item) {
+                newslist += '<li><a target="_blank" href="../home/content.html?id=' + item.id + '">' + item.title + '</a></li>'
+            })
+            $("#scnews").html(newslist)
+        }else{
+            alert(json.msg)
+        }
+    }, 'json')
+    $.post(commonURL + 'm/news/list.do', {
+        menuId:72,
+        startNum:0,
+        perNum:8
+    }, function(json){
+        if(json.success){
+            var newslist = ''
+            var data = json.data.rows
+            $.each(data, function (index, item) {
+                newslist += '<li><a target="_blank" href="../home/content.html?id=' + item.id + '">' + item.title + '</a></li>'
+            })
+            $("#xwnotice").html(newslist)
+        }else{
+            alert(json.msg)
+        }
+    }, 'json')
 
+</script>
 </body>
 </html>
