--- a/owmanagement.html
+++ b/owmanagement.html
@@ -26,16 +26,15 @@
     </div>
 </div>
 
-<div id="addialog" class="easyui-dialog" closed="true" style="width:100%;height:100%;padding:10px">
+<div id="addialog" class="easyui-dialog" shadow="false" closed="true" style="width:100%;height:500px;padding:10px">
     <form action="" id="formlist">
         <table cellpadding="5" width="100%">
             <tr>
+                <td>标题:</td>
+                <td><input class="easyui-validatebox" type="text" name="title"></input></td>
                 <td>摘要:</td>
                 <td><input class="easyui-validatebox" data-options="required:true,validType:{
 		length:[0,60]}" type="text" name="summary"></input></td>
-
-                <td>标题:</td>
-                <td><input class="easyui-validatebox" type="text" name="title"></input></td>
             </tr>
             <tr>
                 <td>排序值:</td>
@@ -60,7 +59,7 @@
     </form>
     <p class="error hide">您还有未填的项目，无法提交！</p>
 </div>
-<div id="modifymenu" class="easyui-dialog" closed="true" style="width:400px;height:300px;padding:10px">
+<div id="modifymenu" class="easyui-dialog" shadow="false" closed="true" style="width:400px;height:300px;padding:10px">
     <form action="" id="menuformlist">
         <table cellpadding="5">
             <!--<tr>-->
@@ -95,15 +94,16 @@
 </div>
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addrow()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()"></a>
+        <a href="javascript:void(0)" class="easyui-linkbutton" onclick="addrow()">起草</a>
+        <a href="javascript:void(0)" class="easyui-linkbutton" onclick="editrow()">编辑</a>
+        <a href="javascript:void(0)" class="easyui-linkbutton" onclick="deleterow()">删除</a>
         <a href="javascript:void(0)" class="easyui-linkbutton" onclick="modifymenu()">修改菜单属性</a>
     </div>
 </div>
 <script src="js/common.js"></script>
 <script>
     var menuId = null
+    var editRowIndex = null;
     var show_type = [
         {value: 1, text: '显示第一篇内容'},
         {value: 2, text: '标题'},
@@ -187,6 +187,8 @@
                                 }
                             }]
                         })
+                    }else{
+                        menuId = null
                     }
                 }
             })
@@ -238,11 +240,12 @@
             {field: 'order_num', title: '排序值', width: 40}
         ]],
         onSelect: function (index, row) {
-            if (editRowIndex == null) return;
-            $('#articlelist').datagrid('cancelEdit', editRowIndex);
+
+                editRowIndex = index
+
         }
     });
-    updateMenu
+
     function updateMenu(changes) {
         $.post(commonURL + 'm/webmenu/editWebmenu.do', changes, function (json) {
             if (json.success) {
@@ -263,6 +266,11 @@
                 $("#addialog").dialog("close")
                 window.editor.html('')
                 $("#formlist").form('clear');
+                console.log(changes)
+                $('#articlelist').datagrid('updateRow',{
+                    index: editRowIndex,
+                    row: changes
+                });
             } else {
                 alert(json.msg)
             }
