--- a/role.html
+++ b/role.html
@@ -24,9 +24,17 @@
     </table>
     <p class="error hide">您还有未填的项目，无法提交！</p>
 </div>
-<div id="jurisdictionchoose" class="easyui-dialog" closed="true" title="权限选择" style="width: 300px; height: 500px;">
-    <ul id="jurisdictionlist" data-options="animate:true,checkbox:true" class="easyui-tree">
-    </ul>
+<div id="jurisdictionchoose" class="easyui-dialog" closed="true" title="权限选择" style="width: 600px; height: 500px;">
+    <div class="easyui-layout" style="width:600px;height:350px;">
+        <div data-options="region:'west',split:true" style="width:300px; height: 450px;">
+            <ul id="jurisdictionlist" data-options="animate:true,checkbox:true" class="easyui-tree">
+            </ul>
+        </div>
+        <div data-options="region:'east',split:true" style="width:300px; height: 450px">
+            <ul id="owlist" data-options="animate:true,checkbox:true" class="easyui-tree">
+            </ul>
+        </div>
+    </div>
 </div>
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
@@ -239,6 +247,7 @@
                     rolemenus: getChecked(),
                     roleId: editRowId
                 }
+//                return false;
                  $.ajax({
                     url: commonURL + 'm/rolemenu/refresh.do', 
                     data: JSON.stringify(postdata), 
@@ -257,24 +266,42 @@
         }]
     })
 
-    function getChecked(){
-            var nodes = $('#jurisdictionlist').tree('getChecked');
-            var s = [];
-            for(var i=0; i<nodes.length; i++){
-                // if (s != '') s += ',';
-                // s.push({'menuId': nodes[i].text});
-                s.push(nodes[i].id)
-                // if(nodes[i].parent_id != null)
-                //     s.push(nodes[i].parent_id)
+    function getChecked(ele){
+        var nodes = $('#jurisdictionlist').tree('getChecked');
+        var s = [];
+        var owchecked = false;
+        for(var i=0; i<nodes.length; i++){
+            // if (s != '') s += ',';
+            // s.push({'menuId': nodes[i].text});
+            if(nodes[i].id == 43){
+                owchecked = true
+                continue;
             }
-            var uns = unique(s)
-            var rolemenus = []
-            uns.forEach(function (i, index) {
-                rolemenus.push({'menuId': i})
-            })
-            // console.log(rolemenus);
-            return rolemenus
+            s.push(nodes[i].id)
+            // if(nodes[i].parent_id != null)
+            //     s.push(nodes[i].parent_id)
         }
+        var uns = unique(s)
+        var rolemenus = []
+        uns.forEach(function (i, index) {
+            rolemenus.push({'menuId': i})
+        })
+
+        if(owchecked == true){
+            var ownodes = $('#owlist').tree('getChecked');
+            var ows = [];
+            for(var i = 0; i < ownodes.length; i++){
+                ows.push(nodes[i].id)
+            }
+            var owuns = unique(ows)
+            owuns.forEach(function (i, index) {
+                rolemenus.push({'menuId': 43, "expand": "43_" + i})
+            })
+        }
+
+        console.log(rolemenus);
+        return rolemenus
+    }
     
     function showjurisdiction() {
 //        console.log(editRowId)
@@ -301,20 +328,19 @@
                         //     return data;
                         // }
                     },
-                    // onCheck: function(node){
-                    //     if(node.special_type != null){
-                    //          $.post(commonURL + 'm/menu/getSpecialLists.do', {roleId: editRowId, menuId: node.id}, function (json) {
-                    //             var datastring = JSON.stringify(json.data.specialList)
-                    //             var datastring = datastring.replace(/ischeck/g, 'checked')
-                    //                 datastring = datastring.replace(/name/g, 'text')
-                    //             var data = JSON.parse(datastring)
-                    //              $('#jurisdictionlist').tree('append', {
-                    //                 parent: node.target,
-                    //                 data: data
-                    //             });
-                    //          }, 'json')
-                    //     }
-                    // }
+                     onCheck: function(node){
+                         if(node.special_type != null){
+                              $.post(commonURL + 'm/menu/getSpecialLists.do', {roleId: editRowId, menuId: node.id}, function (json) {
+                                 var datastring = JSON.stringify(json.data.specialList)
+                                 var datastring = datastring.replace(/ischeck/g, 'checked')
+                                     datastring = datastring.replace(/name/g, 'text')
+                                 var data = JSON.parse(datastring)
+                                  $('#owlist').tree({
+                                     data: data
+                                 });
+                              }, 'json')
+                         }
+                     }
                 })
             }else{
                 alert(json.msg)
