commit all files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div data-options="region:'north'" class="header" style="height:110px">
 				<a href="#" onclick="loginOut()" class="easyui-linkbutton fr" data-options="plain:true,iconCls:'icon-back'">退出登录</a>
 				<a href="../home/index.html" class="toplink fr" target="_blank">网站首页 | </a>
-				<span class="welcometip fr">登录用户：<span class="username">刘昴星</span>，北京经贸学院校园信息门户系统欢迎您！</span>
+				<span class="welcometip fr">登录用户：<span class="username"></span>，北京经贸学院校园信息门户系统欢迎您！</span>
 			</div>
             <div data-options="region:'west'" title="功能导航" style="width:220px">
             	<ul id="nav" class="easyui-tree">
