--- a/myyewu.html
+++ b/myyewu.html
@@ -25,10 +25,10 @@
             <td>具体说明:</td>
             <td><input class="easyui-validatebox" type="text" name="descs"></input></td>
         </tr><tr>
-            <td>工作单位:</td>
+            <td>所属部门:</td>
             <td><input class="easyui-validatebox" type="text" name="workaddr"></input></td>
         </tr><tr>
-            <td>证明人:</td>
+            <td>申请人:</td>
             <td><input class="easyui-validatebox" type="text" name="reterence"></input></td>
         </tr>
     </table>
