--- a/worklist.html
+++ b/worklist.html
@@ -58,7 +58,7 @@
             {field: 'id', title: '业务编号', width: 100},
 //            {field: 'recruitname', title: '招聘标题', width: 100},
             {field: 'name', title: '姓名', width: 100},
-            {field: 'reterence', title: '推荐人', width: 100},
+            {field: 'reterence', title: '申请人', width: 100},
             {field: 'create_timestr', title: '申请时间', width: 100},
             {
                 field: 'type', title: '应聘工种', width: 100,
