--- a/account.html
+++ b/account.html
@@ -25,7 +25,7 @@
 </div>
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-large-clipart" plain="true" onclick="showjurisdiction()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-large-clipart" plain="true" onclick="showjurisdiction()">角色选择</a>
     </div>
 </div>
 <script src="js/common.js"></script>
