--- a/salarytypein.html
+++ b/salarytypein.html
@@ -101,10 +101,10 @@
 </div>
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addrow()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()"></a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-large-chart" plain="true" onclick="uploadsalary()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-add" plain="true" onclick="addrow()">起草</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-edit" plain="true" onclick="editrow()">编辑</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()">删除</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-large-chart" plain="true" onclick="uploadsalary()">工资导入</a>
         <a href="files/salarytemplate.xlsx" class="easyui-linkbutton fr" target="_blank">下载工资模板</a>
     </div>
 </div>
