--- a/servicerequset.html
+++ b/servicerequset.html
@@ -20,7 +20,7 @@
 
 <div id="tb" style="padding:5px;height:auto">
     <div style="margin-bottom:5px">
-        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()"></a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-remove" plain="true" onclick="deleterow()">删除</a>
     </div>
 </div>
 <script src="js/common.js"></script>
