--- a/economic.html
+++ b/economic.html
@@ -227,7 +227,7 @@
     function opdialog(optype, menuId) {
         $("#addialog").dialog({
             closed: true,
-            title: optype==1?'添加教职工':'信息修改',
+            title: optype==1?'添加栏目':'信息修改',
             buttons: [{
                 text: '保存',
                 iconCls: 'icon-ok',
