--- a/myyewu.html
+++ b/myyewu.html
@@ -23,7 +23,7 @@
             <td><input class="easyui-validatebox" type="text" name="title"></input></td>
         </tr><tr>
             <td>具体说明:</td>
-            <td><input class="easyui-validatebox" type="text" name="descs"></input></td>
+            <td><input class="easyui-textbox" multiline="true" type="text" name="descs" style="width: 100%"></input></td>
         </tr><tr>
             <td>所属部门:</td>
             <td><input class="easyui-validatebox" type="text" name="workaddr"></input></td>
